<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="↑↑"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/no_links_first_time_link"/>
        <!--the links arrow serves as a natural padding-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:textSize="24sp"
            android:text="@string/no_links_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/no_links_first_time_explanation"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingBottom="12dp"
            android:text="@string/no_links_first_time_prompt"/>
        <TextView
            android:id="@+id/no_links_first_time_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"
            android:clickable="true"
            android:textColorLink="@color/link_color"
            android:text="@string/no_links_first_time_option1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:textSize="20sp"
            android:text="@string/no_links_first_time_option2"/>

    </LinearLayout>
</ScrollView>