<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/time_expired_title"
            />

        <ImageView
            android:id="@+id/time_expired_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_gravity="center"
            android:src="@drawable/departure"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"
            android:text="@string/time_expired_explanation"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"
            android:text="@string/time_expired_prompt"/>

        <Button
            android:id="@+id/time_expired_go_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time_expired_go_back"
            />
    </LinearLayout>
</ScrollView>