<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="48sp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/final_answer_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/final_answer_prompt"/>
    <EditText
        android:id="@+id/final_answer_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:layout_marginBottom="24dp"/>
    <Button
        android:id="@+id/final_answer_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        style="?android:attr/borderlessButtonStyle"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:elevation="2dp"
        android:text="@string/phrase_display_confirm"/>

</LinearLayout>