<?xml version="1.0" encoding="utf-8"?>
<!--we need the coordinator layout so the snack bar is above the bottom navigation-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chain_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/chain_list_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:clipToPadding="false"/>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/chain_list_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:padding="16dp"
        android:background="@color/white"
        android:elevation="8dp"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/chain_list_first_time_title"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:padding="8dp">
                    <ImageView
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/check_me"/>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="24sp"
                        android:text="@string/chain_list_first_time_check_me"/>
                </TableRow>
                <TableRow
                    android:padding="8dp">
                    <ImageView
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/check"/>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="24sp"
                        android:text="@string/chain_list_first_time_check"/>
                </TableRow>
                <TableRow
                    android:padding="8dp">
                    <ImageView
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/x"/>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textSize="24sp"
                        android:text="@string/chain_list_first_time_empty"/>
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/chain_list_first_time_swipe_down"/>
        </LinearLayout>
        
    </android.support.v4.widget.NestedScrollView>
    <RelativeLayout
        android:id="@+id/chain_list_no_chains_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/chain_list_no_chains_imageview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/disappear"/>
        <TextView
            android:id="@+id/chain_list_no_chains_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:text="@string/chain_list_no_chains_description"
            android:layout_above="@id/chain_list_no_chains_imageview"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/chain_list_no_chains_description"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:text="@string/chain_list_no_chains_title"/>

        <!--also in link history-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/chain_list_no_chain_arrow1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/down_arrow"/>
            </RelativeLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/chain_list_no_chain_arrow2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/down_arrow"/>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

